Improve import site.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -54,6 +54,7 @@
     "Default Printer": "Standarddrucker",
     "Delete institute": "Institut löschen",
     "Delete selected access rules": "Ausgewählte Raumzugriffsregeln löschen",
+    "Delete the import.": "Import löschen",
     "Device": "Gerät",
     "Device control was applied on ''%s.": "Geräteaktion wurde an '%s' angewendet.",
     "Devices": "Geräte",
@@ -62,6 +63,8 @@
     "Do you realy want to logout?": "Wollen Sie sich wirklich abmelden?",
     "Download software packages.": "Softwarepakete herunterladen.",
     "Download the installation image": "Installationsmedium herunterladen",
+    "Download the password files as pdf files.": "Passwortdatein als PDFs herunterladen.",
+    "Download the password files as txt files.": "Paswortdateien als TXT herunterladen.",
     "Download the setup script": "Setupscript herunterladen",
     "Edit customer": "Kunden bearbeiten",
     "Edit device": "Gerät bearbeiten",
@@ -156,11 +159,14 @@
     "Server configuration": "Konfiguration",
     "Set the next default values": "Nächste Standardwerte eintragen",
     "Settings": "Einstellungen",
+    "Show the import result.": "Ergebnis des Imports anzeigen",
     "Shut down the server.": "Server herunterfahren",
     "Software installation status:": "Status der Softwareinstallationen:",
     "Start clone members of selected hwconf:": "Klonen starten für die Gerätekonfiguration:",
+    "Start the import as real import not test.": "Testimport als realer Import starten.",
     "Start time": "Gestartet",
     "Stop firewall": "Firewall anhalten",
+    "Stop the running user import": "Laufenden Import anhalten",
     "Surfing is for '%s' disabled.": "Das Surfen ist für '%s' verboten.",
     "Surfing is for '%s' enabled.": "Das Surfen ist für '%s' erlaubt.",
     "System configuration": "Systemeinstellungen",
