Implementing:     Stop running import     Delete import     Download txt password files.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -38,6 +38,7 @@
     "Collect files": "Dateien einsammeln",
     "Confirm": "bestätigen",
     "Confirm!": "Bestätigen!",
+    "Content of the log": "Inhalt der Logdatei",
     "Create a new customer.": "Neuen Kunden anlegen",
     "Create a new device.": "Neues Gerät erstellen",
     "Create a new group": "Neue Gruppe erstellen",
@@ -86,7 +87,10 @@
     "Groups": "Gruppen",
     "HWConf": "Gerätekonfiguration",
     "HWConfs": "Gerätekonfigurationen",
+    "Import ist just running.": "Import läuft gerade",
     "Import users": "Benutzerimporte",
+    "Import was deleted.": "Import wurde gelöscht",
+    "Import was stopped.": "Import wurde angehalten",
     "Incoming rules": "Eingehende Regeln",
     "Installation sets": "Installationssets",
     "Installation status": "Status der Installationen",
@@ -135,6 +139,7 @@
     "Printing": "Drucken",
     "ProductOrder": "Bestellung",
     "Refresh package list.": "Paketliste aktualisieren.",
+    "Refresh the import list": "Liste der Importe neu laden",
     "Remote access": "Fernwartung",
     "Request was sent. Please be patient!": "Die Anfrage wurde gesendet. Bitte warten!",
     "Reset password": "Passwort setzten",
@@ -162,6 +167,7 @@
     "Show the import result.": "Ergebnis des Imports anzeigen",
     "Shut down the server.": "Server herunterfahren",
     "Software installation status:": "Status der Softwareinstallationen:",
+    "Start a new user import": "Neuen Benutzerimport starten",
     "Start clone members of selected hwconf:": "Klonen starten für die Gerätekonfiguration:",
     "Start the import as real import not test.": "Testimport als realer Import starten.",
     "Start time": "Gestartet",
