New translation. Fix build script. Close modal after response arived.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -90,6 +90,7 @@
     "Import ist just running.": "Import läuft gerade",
     "Import users": "Benutzerimporte",
     "Import was deleted.": "Import wurde gelöscht",
+    "Import was started.": "Benutzerimport wurde gestartet",
     "Import was stopped.": "Import wurde angehalten",
     "Incoming rules": "Eingehende Regeln",
     "Installation sets": "Installationssets",
