Unify building of object lists. Enhance size for name and uid. DO NOT USE FormBuilder. We turn to NgForm Enhance translation.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -4,6 +4,7 @@
     "Actual status": "Aktueller Status",
     "AdHoc rooms": "AdHoc Räume",
     "Add Device": "Gerät registrieren",
+    "Add adhocroom": "AdHoc Raum anlegen",
     "Add device": "Gerät anlegen",
     "Add group": "Gruppe anlegen",
     "Add hwconf": "Gerätekonfiguration anlegen",
@@ -67,6 +68,7 @@
     "Download the password files as pdf files.": "Passwortdatein als PDFs herunterladen.",
     "Download the password files as txt files.": "Paswortdateien als TXT herunterladen.",
     "Download the setup script": "Setupscript herunterladen",
+    "Edit adhocroom": "AdHoc Raum bearbeiten",
     "Edit customer": "Kunden bearbeiten",
     "Edit device": "Gerät bearbeiten",
     "Edit group": "Gruppe bearbeiten",
@@ -103,6 +105,7 @@
     "Manage customer": "Kunden verwalten",
     "Manage devices": "Geärte verwalten",
     "Manage devices in selected room": "Geärte verwalten. Raum:",
+    "Manage devices in selected room:": "Geräte bearbeiten im ausgewählten Raum:",
     "Manage firewall configuration": "Firewalleinstellungen",
     "Manage groups": "Gruppen verwalten",
     "Manage hwconfs": "Gerätekonfigurationen verwalten",
