--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -21,11 +21,13 @@
     "Add userImport": "Benutzerimport starten",
     "Addon modules": "Zusatzmodule",
     "All Institutes": "Alle Instituten",
+    "All hwconfs": "alle",
     "All institutes": "Alle Instituten",
     "All rooms": "Alle Räume",
     "All users": "Alle Benutzer",
     "Apply action on all devices in room": "Aktion an allen Geräten im Raum anwenden.",
     "Apply actions on the selected objects": "Aktionen an den ausgewählten Objekten ausführen.",
+    "Apply changes": "Änderungen anwenden",
     "Apply chnages": "Änderungen anwenden.",
     "Apply state on all running devices": "Status an allen laufenden Geräten anwenden.",
     "Available Printers": "Weitere Drucker",
@@ -34,6 +36,8 @@
     "Backup": "Backup",
     "Base configuration": "Grundkofiguration",
     "Basic configuration": "Grundkonfiguration",
+    "Boot configuration for %s was removed succesfully.": "Die Bootkonfiugration für %s wurde erfolgreich entfernt.",
+    "Boot configuration was saved succesfully for %s.": "Die Bootkonfiugration für %s wurde erfolgreich erstellt.",
     "Cancel": "verwerfen",
     "Change grouping of the table": "Gruppierung der Tabelle ändern",
     "Collect files": "Dateien einsammeln",
@@ -43,6 +47,7 @@
     "Create a new customer.": "Neuen Kunden anlegen",
     "Create a new device.": "Neues Gerät erstellen",
     "Create a new group": "Neue Gruppe erstellen",
+    "Create a new hardware configuration": "Neue Gerätekonfiguration erstellen",
     "Create a new installation set": "Neues Installationsset erstellen",
     "Create a new institute": "Neues Institut erstellen",
     "Create a new printer": "Neuen Drucker erstellen",
@@ -54,6 +59,7 @@
     "Create installation set": "Installationsset erstellen",
     "Customers": "Kunden",
     "Default Printer": "Standarddrucker",
+    "Delete hwconf": "Gerätekonfiguration löschen",
     "Delete institute": "Institut löschen",
     "Delete selected access rules": "Ausgewählte Raumzugriffsregeln löschen",
     "Delete the import.": "Import löschen",
@@ -103,9 +109,8 @@
     "List of old Imports": "Alte Imports",
     "List of the results:": "Liste der Rückmeldungen",
     "Manage customer": "Kunden verwalten",
-    "Manage devices": "Geärte verwalten",
-    "Manage devices in selected room": "Geärte verwalten. Raum:",
-    "Manage devices in selected room:": "Geräte bearbeiten im ausgewählten Raum:",
+    "Manage devices": "Geräte verwalten",
+    "Manage devices in selected room:": "Geräte bearbeiten. Raum:",
     "Manage firewall configuration": "Firewalleinstellungen",
     "Manage groups": "Gruppen verwalten",
     "Manage hwconfs": "Gerätekonfigurationen verwalten",
@@ -123,6 +128,7 @@
     "Modify printers for selected device": "Drucker für das Gerät einstellen",
     "Modify printers for selected object": "Drucker einstellen für:",
     "Modify printers selected room": "Drucker im Raum einstellen",
+    "Modify selected hwconf": "Gerätekonfiguration bearbeiten",
     "Modify selected institute:": "Institut bearbeiten:",
     "Modify selected user:": "Benutzer bearbeiten:",
     "Modify selecter group:": "Gruppe bearbeiten",
@@ -145,6 +151,7 @@
     "Refresh package list.": "Paketliste aktualisieren.",
     "Refresh the import list": "Liste der Importe neu laden",
     "Remote access": "Fernwartung",
+    "Remove archived images": "Arhivierte Images löschen",
     "Request was sent. Please be patient!": "Die Anfrage wurde gesendet. Bitte warten!",
     "Reset password": "Passwort setzten",
     "Reset printer": "Printer zurücksetzten",
@@ -172,7 +179,6 @@
     "Shut down the server.": "Server herunterfahren",
     "Software installation status:": "Status der Softwareinstallationen:",
     "Start a new user import": "Neuen Benutzerimport starten",
-    "Start clone members of selected hwconf:": "Klonen starten für die Gerätekonfiguration:",
     "Start the import as real import not test.": "Testimport als realer Import starten.",
     "Start time": "Gestartet",
     "Stop firewall": "Firewall anhalten",
@@ -306,6 +312,7 @@
     "mandatoryProfile": "Windowsprofil einfrieren.",
     "manually": "Manuell installiert",
     "manufacturer": "Hersteller",
+    "members": "Mitglieder",
     "members of the group": "Gruppenmitglieder",
     "model": "Model",
     "monday": "Montag",
@@ -379,9 +386,11 @@
     "sortInDirs": "In Benutzerverzeichnissen sortieren",
     "sourceAvailable": "Quellen verfügbar",
     "special": "Sonderschule",
+    "startclone": "Klonen starten",
     "state": "Bundesland",
     "status": "Status",
     "statusGrouping": "Gruppierung nach Installationsstatus/Software/Raum",
+    "stopclone": "Klonen anhalten",
     "students": "Schüler",
     "studentsOnly": "Nur für Schüler",
     "subject": "Betreff",
