Fix a lot of translations. Remove icon suffixes like sharp or outline. Fix grouping in room access list.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,5 +1,5 @@
 {
-    "Acces was deleted succesfully": "Zugriffslregel wurde erfolgreich gelöscht",
+    "Acces was deleted succesfully": "Zugriffsregel wurde erfolgreich gelöscht",
     "Access state in %s was set succesfully.": "Zungangsstatus im Raum %s wurde gäendert.",
     "Actual status": "Aktueller Status",
     "AdHoc rooms": "AdHoc Räume",
@@ -11,11 +11,13 @@
     "Add institute": "Institut anlegen",
     "Add new room access status": "Neue Raumzugriffsregel anlegen",
     "Add notice": "Notiz zufügen",
+    "Add outgoing rule": "Ausgehende Regel erstellen",
     "Add printer": "Drucker anlegen",
     "Add printer queue": "Warteschlange anlegen",
+    "Add remote access rule": "Fernwartungsregel erstellen",
     "Add remove user to/from the selected groups.": "Benutzer aus den markierten Gruppen entfernen bzw. hinzufügen.",
     "Add room": "Raum anlegen",
-    "Add room access rule.": "Zugriffslregel setzten",
+    "Add room access rule.": "Zugriffsregel setzten",
     "Add support": "Supportanfrage stellen",
     "Add user": "Benutzer anlegen",
     "Add userImport": "Benutzerimport starten",
@@ -28,7 +30,6 @@
     "Apply action on all devices in room": "Aktion an allen Geräten im Raum anwenden.",
     "Apply actions on the selected objects": "Aktionen an den ausgewählten Objekten ausführen.",
     "Apply changes": "Änderungen anwenden",
-    "Apply chnages": "Änderungen anwenden.",
     "Apply state on all running devices": "Status an allen laufenden Geräten anwenden.",
     "Available Printers": "Weitere Drucker",
     "Available groups:": "Weitere Gruppen:",
@@ -62,6 +63,8 @@
     "Delete hwconf": "Gerätekonfiguration löschen",
     "Delete institute": "Institut löschen",
     "Delete selected access rules": "Ausgewählte Raumzugriffsregeln löschen",
+    "Delete selected outgoing rule": "Markierte ausgehende Regel löschen",
+    "Delete selected remote access rule": "Markierte Fernwartungsregel löschen",
     "Delete the import.": "Import löschen",
     "Device": "Gerät",
     "Device control was applied on ''%s.": "Geräteaktion wurde an '%s' angewendet.",
@@ -108,6 +111,7 @@
     "List of Imports": "Liste der Importe",
     "List of old Imports": "Alte Imports",
     "List of the results:": "Liste der Rückmeldungen",
+    "Manage access in the rooms": "Zugriffsstatus in den Räumen verwalten",
     "Manage customer": "Kunden verwalten",
     "Manage devices": "Geräte verwalten",
     "Manage devices in selected room:": "Geräte bearbeiten. Raum:",
@@ -148,6 +152,7 @@
     "Printers of the room was set.": "Die Drucker wurden für den Raum gesetzt",
     "Printing": "Drucken",
     "ProductOrder": "Bestellung",
+    "Refresh all objects": "Alle Objekte vom Server holen",
     "Refresh package list.": "Paketliste aktualisieren.",
     "Refresh the import list": "Liste der Importe neu laden",
     "Remote access": "Fernwartung",
@@ -156,6 +161,7 @@
     "Reset password": "Passwort setzten",
     "Reset printer": "Printer zurücksetzten",
     "Restart firewall": "Firewall neu starten",
+    "Restart proxy.": "Proxy neu starten.",
     "Restart the server.": "Server neu starten.",
     "Room": "Raum",
     "Room access": "Raumzugriff",
@@ -202,6 +208,7 @@
     "User was modified succesfully": "Benutzer wurde erfolgreich geändert",
     "Users": "Benutzer",
     "Write configuration and create installation image": "Konfiugration schreiben und Installationsmedium erstellen",
+    "Write proxy configuration and restart proxy.": "Proxykonfiugration schreiben und Proxy neu starten",
     "Write state files for the devices": "Statefiles für die Geräte erstellen",
     "You must not set access control in a room with no room control.": "In diesem Raum dürfen keine Zugriffsregel gesetzt werden.",
     "acceptingJobs": "Aufträge annehmen",
