Enhance translations. Make reading own lists more stable.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,7 +1,6 @@
 {
-    "Custom list was written succesfull":"Eigene Liste wurde erfolgreich geschrieben",
-    "%s was created succesfully.":"%s wurde erfolgreich erstellt.",
-    "%s was deleted succesfully.":"%s wurde erfolgreich gelöscht.",
+    "%s was created succesfully.": "%s wurde erfolgreich erstellt.",
+    "%s was deleted succesfully.": "%s wurde erfolgreich gelöscht.",
     "Acces was deleted succesfully": "Zugriffsregel wurde erfolgreich gelöscht",
     "Access state in %s was set succesfully.": "Zungangsstatus im Raum %s wurde gäendert.",
     "Actual status": "Aktueller Status",
@@ -61,6 +60,7 @@
     "Create a new software package": "Softwarepaket erstellen",
     "Create a new user": "Neuen Benutzer erstellen",
     "Create installation set": "Installationsset erstellen",
+    "Custom list was written succesfull": "Eigene Liste wurde erfolgreich geschrieben",
     "Customers": "Kunden",
     "Default Printer": "Standarddrucker",
     "Delete hwconf": "Gerätekonfiguration löschen",
@@ -91,6 +91,7 @@
     "Edit settings": "Oberfläche anpassen.",
     "Edit user": "Benutzer bearbeiten",
     "Edit user preferences": "Benutzereinstellungen bearbeiten",
+    "Enter a new domain name": "Neuen Domainnamen eintragen",
     "Error": "Fehlerbericht",
     "FeatureRequest": "Featureanfrage",
     "Feedback": "Rückmeldung (Lob)",
@@ -123,6 +124,7 @@
     "Manage hwconfs": "Gerätekonfigurationen verwalten",
     "Manage institutes": "Instituten verwalten",
     "Manage positive lists": "Positive listen verwalten",
+    "Manage proxy configuration": "Proxykonfiguration",
     "Manage rooms": "Räume verwalten",
     "Manage software installation sets:": "Installationssets verwalten",
     "Manage user imports": "Benutzerimporte verwalten",
@@ -155,13 +157,14 @@
     "Printers of the room was set.": "Die Drucker wurden für den Raum gesetzt",
     "Printing": "Drucken",
     "ProductOrder": "Bestellung",
+    "Profile": "Profil",
     "Refresh all objects": "Alle Objekte vom Server holen",
     "Refresh package list.": "Paketliste aktualisieren.",
     "Refresh the import list": "Liste der Importe neu laden",
     "Remote access": "Fernwartung",
     "Remove archived images": "Arhivierte Images löschen",
     "Request was sent. Please be patient!": "Die Anfrage wurde gesendet. Bitte warten!",
-    "Reset password": "Passwort setzten",
+    "Reset password": "Passwort setzen",
     "Reset printer": "Printer zurücksetzten",
     "Restart firewall": "Firewall neu starten",
     "Restart proxy.": "Proxy neu starten.",
@@ -199,7 +202,12 @@
     "The '%s' was disabled.": "Der Benutzer '%s' wurde deaktiviert.",
     "The '%s' was enabled.": "Der Benutzer '%s' wurde aktiviert.",
     "The MAC address '%s' will be used allready by '%s'.": "Die MAC-Adresse '%s' wird von Gerät '%s' benutzt.",
+    "The black list was changed.": "Die eigene Black Liste wurde geändert.",
+    "The cephalix list was changed.": "Die eigene Cephalix Liste wurde geändert.",
+    "The changes will be lost if you leave the module.": "Ihre Änderungen gehen verloren, wenn Sie das Modul verlassen.",
+    "The incomming rules was changed but not saved.": "Die eingehende Firewallregeln wurden geändert.",
     "The members of group was set.": "Die Mitglieder der Gruppe wurden geändert.",
+    "The white list was changed.": "Die eigene White Liste wurde geändert.",
     "The windows profile of '%s' was froozen.": "Das Windowsprofil von '%s' wurde eingefroren.",
     "The windows profile of '%s' was removed.": "Das Windowsprofil von '%s' wurde gelöscht.",
     "This field is required!": "Dieses Feld muss ausgeüllt werden!",
