New feature appendClassToPassword

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -236,6 +236,7 @@
     "allTeachers": "durch alle Lehrer",
     "anonDhcpNetwork": "ANON_DHCP Netzwerk",
     "appendBirthdayToPassword": "Geburtsdatum an Passwort anhängen.",
+    "appendClassToPassword": "Klassennamen an Passwort anhängen.",
     "apply": "anwenden",
     "applyForAll": "Für alle",
     "available members": "Nicht Mitglieder der Gruppe",
