Introduce ion-selectable to be able to search in very long lists.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -13,6 +13,7 @@
     "Add institute": "Institut anlegen",
     "Add new room access status": "Neue Raumzugriffsregel anlegen",
     "Add notice": "Notiz zufügen",
+    "Add outgoing firewall rule": "Ausgehende Firewallregel hinzufügen",
     "Add outgoing rule": "Ausgehende Regel erstellen",
     "Add printer": "Drucker anlegen",
     "Add printer queue": "Warteschlange anlegen",
@@ -99,6 +100,8 @@
     "File '%s' successfully saved to user '%s'.": "Die Datei '%s' wurde für '%s' erfolgreich gespeichert.",
     "File was collected from: %s": "Datei(en) wurde(n) von %s eingesammelt",
     "Filtered internet access": "Gefilterter Internetzugang",
+    "Firewall incoming access rule  was set succesfully.": "Einkomende Firewallregeln wurden erfolgreich gesetzt.",
+    "Firewall outgoing access rule  was set succesfully.": "Ausgehende Firewallregeln wurden erfolgreich gesetzt.",
     "Group": "Gruppe",
     "Groups": "Gruppen",
     "HWConf": "Gerätekonfiguration",
@@ -162,6 +165,7 @@
     "Printing": "Drucken",
     "ProductOrder": "Bestellung",
     "Profile": "Profil",
+    "Protocol": "Protokol",
     "Refresh all objects": "Alle Objekte vom Server holen",
     "Refresh package list.": "Paketliste aktualisieren.",
     "Refresh the import list": "Liste der Importe neu laden",
@@ -177,6 +181,7 @@
     "Room access": "Raumzugriff",
     "Room access rules": "Raumzugriffsregeln",
     "Rooms": "Räume",
+    "Rule type": "Art der Regel",
     "Security": "Sicherheit",
     "Select a room": "Raum wählen",
     "Select objects": "Objekte auswählen",
@@ -269,6 +274,7 @@
     "delete": "löschen",
     "deleted": " ",
     "description": "Beschreibung",
+    "dest": "Ziel",
     "devCount": "Anzahl der Geräte",
     "device": "Gerät",
     "deviceName": "Gerätename",
