New feature: System -> Room access -> Actual state : The states now can be changed imediately. Enhance translations.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -3,6 +3,7 @@
     "%s was deleted succesfully.": "%s wurde erfolgreich gelöscht.",
     "Acces was deleted succesfully": "Zugriffsregel wurde erfolgreich gelöscht",
     "Access state in %s was set succesfully.": "Zungangsstatus im Raum %s wurde gäendert.",
+    "Acls of the selected object": "ACLs des gewählten Objekts",
     "Actual status": "Aktueller Status",
     "AdHoc rooms": "AdHoc Räume",
     "Add Device": "Gerät registrieren",
@@ -27,6 +28,7 @@
     "Add userImport": "Benutzerimport starten",
     "Addon modules": "Zusatzmodule",
     "All Institutes": "Alle Instituten",
+    "All devices": "Alle Geräte",
     "All hwconfs": "alle",
     "All institutes": "Alle Instituten",
     "All rooms": "Alle Räume",
@@ -36,6 +38,7 @@
     "Apply changes": "Änderungen anwenden",
     "Apply state on all running devices": "Status an allen laufenden Geräten anwenden.",
     "Available Printers": "Weitere Drucker",
+    "Available acls": "Weiter ACLs",
     "Available groups:": "Weitere Gruppen:",
     "Available members:": "Weitere Benutzer:",
     "Backup": "Backup",
@@ -133,6 +136,8 @@
     "Manage proxy configuration": "Proxykonfiguration",
     "Manage rooms": "Räume verwalten",
     "Manage software installation sets:": "Installationssets verwalten",
+    "Manage system acls for groups and users": "ACLs von Gruppen und Benutzern verwalten",
+    "Manage system acls of the selected object:": "ACLs des gewählten Objekts verwalten:",
     "Manage user imports": "Benutzerimporte verwalten",
     "Manage users": "Benutzer verwalten",
     "Member of groups:": "Mitglied der Gruppen:",
@@ -162,6 +167,7 @@
     "Printer was disabled succesfully.": "Drucker wurde erfolgreich deaktiviert",
     "Printer was enabled succesfully.": "Drucker wurde erfolgreich aktiviert",
     "Printer was reseted succesfully.": "Drucker wurde erfolgreich zurückgesetzt.",
+    "Printers": "Drucker",
     "Printers of the device was set.": "Die Drucker wurden für den Rechner gesetzt",
     "Printers of the room was set.": "Die Drucker wurden für den Raum gesetzt",
     "Printing": "Drucken",
@@ -176,7 +182,7 @@
     "Request was sent. Please be patient!": "Die Anfrage wurde gesendet. Bitte warten!",
     "Reset password": "Passwort setzen",
     "Reset printer": "Printer zurücksetzten",
-    "Restart firewall": "Firewall neu starten",
+    "Restart firewall": "Firewall (neu) starten",
     "Restart proxy.": "Proxy neu starten.",
     "Restart the server.": "Server neu starten.",
     "Room": "Raum",
@@ -196,6 +202,7 @@
     "Select the users to remove from the group.": "Aus der Gruppe zu löschende Benutzer markieren!",
     "Sequrity": "Sicherheit",
     "Server configuration": "Konfiguration",
+    "Service state was set successfully.": "Dienststatus wurde erfolgreich gesetzt.",
     "Set the next default values": "Nächste Standardwerte eintragen",
     "Settings": "Einstellungen",
     "Show the import result.": "Ergebnis des Imports anzeigen",
@@ -223,6 +230,7 @@
     "The windows profile of '%s' was froozen.": "Das Windowsprofil von '%s' wurde eingefroren.",
     "The windows profile of '%s' was removed.": "Das Windowsprofil von '%s' wurde gelöscht.",
     "This field is required!": "Dieses Feld muss ausgeüllt werden!",
+    "This is a printer device with defined printer queues. You have to delete this devices via printer management.": "Das ist ein Drucker mit zugewiesenen Warteschlangen. Bitte entfernen Sie es in Druckermanagement.",
     "To login": "Anmelden",
     "Update the server.": "Server aktualisieren.",
     "Upload files": "Dateien verteilen",
