New feature monitor status of system services.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -212,6 +212,7 @@
     "Start a new user import": "Neuen Benutzerimport starten",
     "Start the import as real import not test.": "Testimport als realer Import starten.",
     "Start time": "Gestartet",
+    "Status of the Services": "Status der Serverdienste",
     "Stop firewall": "Firewall anhalten",
     "Stop the running user import": "Laufenden Import anhalten",
     "Support request '%s' was created with ticket number '%s'. Answer will be sent to '%s'.": "Die Supportanfrage '%s' wurde mit der Nummer '%s' erstellt. Anwort wird an '%s' gesendet",
@@ -249,6 +250,7 @@
     "access": "Zugang",
     "accessType": "Zugangsart",
     "action": "Atkion",
+    "active": "aktiv",
     "activeJobs": "Aktive Aufträge",
     "address1": "Adresse",
     "address2": "Adressenzusatz",
@@ -302,6 +304,7 @@
     "email": "Emailadresse",
     "enableInternet": "Surfen erlauben",
     "enableLogin": "Anmelden erlauben",
+    "enabled": "erlaubt",
     "errorMessageDuration": "Dauer der Fehlermeldungen in Sekunden",
     "external port": "externer Port",
     "firstRoom": "Erster Raum",
