Unify lookout of ionic-selectable. Enhance translations.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -13,12 +13,14 @@
     "Add group": "Gruppe anlegen",
     "Add hwconf": "Gerätekonfiguration anlegen",
     "Add institute": "Institut anlegen",
+    "Add new DHCP Option/Statement": "Neue DHCP Option oder Statement erstellen",
     "Add new room access status": "Neue Raumzugriffsregel anlegen",
     "Add notice": "Notiz zufügen",
     "Add outgoing firewall rule": "Ausgehende Firewallregel hinzufügen",
     "Add outgoing rule": "Ausgehende Regel erstellen",
     "Add printer": "Drucker anlegen",
     "Add printer queue": "Warteschlange anlegen",
+    "Add remote acces firewall rule": "Fernwartungsregel erstellen",
     "Add remote access rule": "Fernwartungsregel erstellen",
     "Add remove user to/from the selected groups.": "Benutzer aus den markierten Gruppen entfernen bzw. hinzufügen.",
     "Add room": "Raum anlegen",
@@ -100,6 +102,7 @@
     "Edit user preferences": "Benutzereinstellungen bearbeiten",
     "Enter a new domain name": "Neuen Domainnamen eintragen",
     "Error": "Fehlerbericht",
+    "Exisiting DHCP Options/Statements": "Vorhanden DHCP Optionen und Statements",
     "FeatureRequest": "Featureanfrage",
     "Feedback": "Rückmeldung (Lob)",
     "File %s could not be saved to user: %s: %s": "Die Datei '%s' konnte nicht für '%s' gespeichert werden: '%s'",
@@ -125,6 +128,7 @@
     "List of Imports": "Liste der Importe",
     "List of old Imports": "Alte Imports",
     "List of the results:": "Liste der Rückmeldungen",
+    "Manage DHCP Parameter of:": "DHCP Parameter verwalten:",
     "Manage access in the rooms": "Zugriffsstatus in den Räumen verwalten",
     "Manage customer": "Kunden verwalten",
     "Manage devices": "Geräte verwalten",
@@ -192,6 +196,9 @@
     "Rooms": "Räume",
     "Rule type": "Art der Regel",
     "Security": "Sicherheit",
+    "Select DHCP Option/Statement": "DHCP Option oder Statement wählen",
+    "Select a Device": "Wählen Sie ein Gerät",
+    "Select a Room": "Wählen Sie einen Raum",
     "Select a room": "Raum wählen",
     "Select objects": "Objekte auswählen",
     "Select picture size": "Bildgröße wählen",
@@ -418,6 +425,7 @@
     "serverShutdown": "Server ausschalten",
     "serverUpdate": "Server aktualisieren",
     "serverUploadFile": "Datei auf den Server hochladen",
+    "set value": "Wert setzten",
     "setFilesystemQuota": "Filesystemquota setzten",
     "setMailSystemQuota": "Mailsystemquota setzten",
     "setPassword": "Passwort ändern",
