--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -95,6 +95,7 @@
     "Edit group": "Gruppe bearbeiten",
     "Edit hwconf": "Gerätekonfiguration bearbeiten",
     "Edit installation set": "Installationsset bearbeiten",
+    "Edit installation set:": "Installationsset bearbeiten:",
     "Edit institute": "Institut bearbeiten",
     "Edit room": "Raum bearbeiten",
     "Edit settings": "Oberfläche anpassen.",
@@ -244,6 +245,7 @@
     "Toggle yes no": "umschalten",
     "Update the server.": "Server aktualisieren.",
     "Upload files": "Dateien verteilen",
+    "Used": "Benutzt",
     "User": "Benutzer",
     "User parameters were modified successfully.": "Die Benutzerdaten wurden erfolgreich geändert.",
     "User parameters were set successfully.": "Benutzerparameter wurden erfolgreich geändert.",
@@ -382,6 +384,7 @@
     "noticeType": "Art",
     "notices": "Notizen",
     "objectType": "Art des Objekts",
+    "of": "von",
     "okMessageDuration": "Dauer der Erfolgsmeldungen in Sekunden",
     "open": "öffnen",
     "other": "Andere Institution",
