Use input type=date instead of time ticker. Fix handling of mutlivalued elements.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -36,8 +36,8 @@
     "All rooms": "Alle Räume",
     "All users": "Alle Benutzer",
     "Apply Default": "Standardstatus",
-    "Apply action on all devices in room": "Aktion an allen Geräten im Raum anwenden.",
     "Apply actions on the selected objects": "Aktionen an den ausgewählten Objekten ausführen.",
+    "Apply an action on all devices in room": "Eine Aktion an allen Geräten im Raum anwenden.",
     "Apply changes": "Änderungen anwenden",
     "Apply state on all running devices": "Status an allen laufenden Geräten anwenden.",
     "Available Printers": "Weitere Drucker",
@@ -52,6 +52,8 @@
     "Cancel": "verwerfen",
     "Change grouping of the table": "Gruppierung der Tabelle ändern",
     "Collect files": "Dateien einsammeln",
+    "Collect the file from the Export directory of the logged on users or of the workstation users.": "Dateien aus der den Exportverzeichnissen der angemeldeten Benutzer oder der Worksationsbenutzer einsammeln.",
+    "Comma separated list": "Elemente mit Komma trennen!",
     "Confirm": "bestätigen",
     "Confirm!": "Bestätigen!",
     "Content of the log": "Inhalt der Logdatei",
@@ -170,6 +172,7 @@
     "Picture size": "Bildgröße",
     "Please select at last one object!": "Bitte mindestens ein Objekt markieren!",
     "Positive lists": "Positivlisten",
+    "Post file into the Import directory of the logged on users or of the workstation users.": "Verteile Datei(en) in die Importverzeichnisse der angemeldeten Benutzer oder der Worksationsbenutzer.",
     "Printer was disabled succesfully.": "Drucker wurde erfolgreich deaktiviert",
     "Printer was enabled succesfully.": "Drucker wurde erfolgreich aktiviert",
     "Printer was reseted succesfully.": "Drucker wurde erfolgreich zurückgesetzt.",
