Implemnt new old action set hwconf of room. Make items more readable by mat tool tip.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,7 @@
 {
+    "csv-export":"CSV Export",
+    "Selected Items:":"Gewählte Objekte:",
+    "sethwconfofroom":"Raumgerätekonfiguration setzen.",
     "%s was created succesfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted succesfully.": "%s wurde erfolgreich gelöscht.",
     "Acces was deleted succesfully": "Zugriffsregel wurde erfolgreich gelöscht",
