Implementing software license management. Implementing styling of file input.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,14 @@
 {
+    "File to Upload":"Datei wählen",
+    "Files to Upload":"Datei(en) wählen",
+    "Manage licences for":"Lizenzen verwalten",
+    "Add new license":"Neue lizenz eintragen",
+    "Exsisting licenses":"Vorhandene Lizenzen",
+    "licenseType":"Lizenztip",
+    "count":"Anzahl",
+    "value":"Lizenzschlüssel",
+    "Edit software":"Softwarepaket bearbeiten",
+    "The password of '%s' was reseted.":"Das Passwort für '%s' wurde gesetzt.",
     "Own Black List":"Eigene Black List",
     "Denied Categories":"Verbotene Kategorien",
     "%s was created succesfully.": "%s wurde erfolgreich erstellt.",
