--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -30,10 +30,10 @@
     "Add user": "Benutzer anlegen",
     "Add userImport": "Benutzerimport starten",
     "Addon modules": "Zusatzmodule",
-    "All Institutes": "Alle Instituten",
+    "All Institutes": "Alle Institute",
     "All devices": "Alle Geräte",
     "All hwconfs": "alle",
-    "All institutes": "Alle Instituten",
+    "All institutes": "Alle Institute",
     "All rooms": "Alle Räume",
     "All users": "Alle Benutzer",
     "Apply Default": "Standardstatus",
@@ -145,7 +145,7 @@
     "Manage firewall configuration": "Firewalleinstellungen",
     "Manage groups": "Gruppen verwalten",
     "Manage hwconfs": "Gerätekonfigurationen verwalten",
-    "Manage institutes": "Instituten verwalten",
+    "Manage institutes": "Institute verwalten",
     "Manage licences for": "Lizenzen verwalten",
     "Manage licenses": "Lizenzen verwalten",
     "Manage licenses for": "Lizenzen verwalten für",
@@ -326,7 +326,7 @@
     "deviceType": "Gerättyp",
     "devices": "Geräte",
     "devicesProUser": "Gerät pro Benutzer",
-    "direct": "Direktinternet",
+    "direct": "direktes Internet",
     "disableInternet": "Surfen verbeiten",
     "disableLogin": "Anmelden verbieten",
     "domain": "DNS-Domain",
@@ -397,7 +397,7 @@
     "msQuota": "Mailsystemquota",
     "msQuotaUsed": "Mailsystembenutzung",
     "mustChange": "Passwort bei erster Anmeldung ändern",
-    "myDevice": "Geräten",
+    "myDevice": "Geräte",
     "mySelf": "Angaben",
     "name": "Name",
     "name2": "Namenzusatz",
