Make action fields wither to be able to see delete Implementing writing state files and apply states.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,19 @@
 {
+    "cephalixInstituteId":"Institute",
+    "lastUpdate":"Letztes<br>Update",
+    "runningKernel":"Kernelversion",
+    "availableUpdates":"Updatestand",
+    "installedKernel":"Installierter Kernel",
+    "rootUsage":"/ Belegung",
+    "srvUsage":"/srv Belegung",
+    "homeUsage":"/home Belegung",
+    "varUsage":"/var Belegung",
+    "Device was modified succesfully.":"Gerät wurde erfolgreich geändert.",
+    "Logged in users was cleaned up on '%s'.":"Angemeldete Benutzer am '%s' wurden gelöscht.",
+    "Device control was applied on '%s'.":"Gerätekontroll wurde am '%s' angewendet.",
+    "HWConf was set on '%s'.":"Gerätekonfiguration wurde am '%s' geändert.",
+    "Salt High State was applied on all running minions.":"Die Salt-Konfiguration wird an allen aktiven Clients angewendet.",
+    "Download of the softwares was started succesfully":"Das Heruntreladen von Softwarepakten wurde gestartet.",
     "%s was created succesfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted succesfully.": "%s wurde erfolgreich gelöscht.",
     "Acces was deleted succesfully": "Zugriffsregel wurde erfolgreich gelöscht",
